Message: Fix collapsing multiple spaces

--- a/src/components/middle/message/_message-content.scss
+++ b/src/components/middle/message/_message-content.scss
@@ -55,6 +55,7 @@
   .text-content {
     margin: 0;
     word-break: break-word;
+    white-space: pre-wrap;
     line-height: 1.3125;
     text-align: initial;
     display: flow-root;
